# agar-oss

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  brief.md  cli.py  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
api/: db.py  main.py  manage.py  models.py  runner.py  sampler.py  security.py  thread.py
deploy/examples/: docker-compose.yml  fly.toml
personas/: personas_adversarial.jsonl  personas_creative.jsonl  personas_hn_spicy.jsonl  personas_sarc.jsonl
sim/: agent_factory.py  analyzer.py  claude_model.py  hn_platform.py  html_report.py  openrouter_model.py  petri_agent.py  render.py  runner.py  sampler.py  session.py  setup.py  sim_API.md  state.py  synthesizer.py  tagger.py
tests/: test_billing.py
