[project]
name = "agar"
version = "0.3.0"
description = "Social simulation layer for product research — grounded agents reacting to a product on a simulated HN-style platform."
requires-python = ">=3.10,<3.12"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "camel-oasis>=0.2.5",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
agar = "cli:main"
agar-api = "api.main:run_server"
agar-keys = "api.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sim", "api", "cli.py"]

[tool.uv]
package = true
